--- a/styles/style.css
+++ b/styles/style.css
@@ -4,16 +4,28 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700&display=swap');
 
-
+ 
 body{
     color: #3A3A3A;
     margin: 0%;
-    background-color: #AAAAAA;
     font-family: 'Poppins', sans-serif;
 }
 .navbar{
     margin-left: 120px;
     margin-right: 160px;
+    display: flex;
+    justify-content: space-between;
+}
+.menu-item>ul{
+    display: flex;
+}
+.menu-item>ul>li{
+    list-style: none;
+}
+.menu-item>ul>li>a{
+    color: #3A3A3A;
+    text-decoration: none;
+    margin-left: 15px;
 }
 section{
     margin-bottom: 50px;
@@ -23,13 +35,10 @@ p{
     color: #6C6C6C;
 }
 
-/* ---------------------------------
-            Main Section Styles 
------------------------------------*/
-
 main{
-    padding-left: 100px;
-    padding-right: 100px;
+    display: grid;
+    grid-template-columns: 1;
+    justify-content: center;
     margin-bottom: 50px;
 }
 .header{
@@ -46,6 +55,9 @@ main{
     line-height: 70px;
     font-weight: 700;
 }
+.header-info h5{
+    font-size: 16px;
+}
 .button{
     color: white;
     background-color: #E02C6D;
@@ -53,12 +65,10 @@ main{
     padding: 10px 24px;
     text-decoration: none;
 }
-.header>img{
-    height: 80%;
-    padding-left: 100px;
+.header>.header-image{
     transition: transform 2s;
 }
-.header-image:hover{
+.header>.header-image:hover{
     transform: rotate(360deg);
 }
 
@@ -73,12 +83,15 @@ main>h2{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     padding-right: 10%;
+    justify-content: center;
 }
 .item{
     width: 250px;
     margin: 15px;
     padding: 40px;
+    border: 1px solid lightgray;
     border-radius: 5px;
+    box-shadow:  3px 3px 10px lightgray;
     background-color: white;
     line-height: 20px;
 }
@@ -91,7 +104,8 @@ main>h2{
 }
 .more{
     color: #E02C6D;
-    text-align: end;
+    padding-bottom: 100px;
+    margin-left: 70%;
 }
 
 /* ---------------------------------
@@ -106,6 +120,7 @@ main>h2{
 }
 .feature-info{
     padding-right: 100px;
+    margin-left: 5%;
 }
 .feature-info>h2{
     color: #0A0826;
@@ -154,12 +169,11 @@ footer{
 }
 
 
-
 /* ---------------------------------
            Mobile Responsive Styles 
 -----------------------------------*/
 
-@media (max-width: 700px) {
+@media only screen and (max-width: 480px) {
     body{
         margin-right: 0;
         padding: 0px;
@@ -168,12 +182,16 @@ footer{
         justify-content: center;
     }
     .navbar{
-        margin-left: 0px;
+        margin-left: 30px;
         margin-right: 0px;
         text-align: center;
     }
+    .menu-item{
+        display: none;
+    }
     .header{
         margin-left: 0px;
+        padding: 15px;
         text-align: center;
         display: flex;
         flex-direction: column;
@@ -202,8 +220,8 @@ footer{
         display: flex;
         flex-direction: column;
         padding-right: 0px;
-        margin-left: 35px;
-        margin-right: 0px;
+        margin-left: 9%;
+        margin-right: 5%;
         justify-content: center;
     }
     .item{
@@ -213,11 +231,6 @@ footer{
         border-radius: 5px;
         background-color: white;
         line-height: 20px;
-    }
-    .more{
-        text-align: end;
-        margin-bottom: 0px;
-        padding-right: 55px;
     }
     .featured-products{
         display: flex;
@@ -242,8 +255,114 @@ footer{
         text-align: center;
     }
     footer{
-        padding-top: 50px;
+        padding-top: 30px;
         padding-bottom: 50px;
         line-height: 10px;
+    }
+    .icons{
+        margin-left: 28%;
+    }
+}
+
+
+/* ---------------------------------
+           Pad Responsive Styles 
+-----------------------------------*/
+
+
+@media only screen and (min-width: 481px) and (max-width : 768px) {
+    body{
+        margin-right: 0;
+        padding: 0px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .navbar{
+        margin-left: 30px;
+        margin-right: 0px;
+    }
+    .menu-item{
+        margin-right: 10%;
+    }
+    .header{
+        margin-left: 0px;
+        margin-left: 30px;
+        margin-right: 30px;
+        padding: 0px;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .header-info>h1{
+        font-size: 30px;
+        line-height: 40px;
+        font-weight: 700;
+    }
+    .header-image{
+        padding-left: 50px;
+    }
+    .header>.header-image>img{
+        width: 300px;
+        height: 300px;
+    }
+
+    main{
+        padding-left: 0px;
+        padding-right: 0px;
+        margin-bottom: 0px;
+        display: flex;
+        flex-direction: column;
+    }
+    .items{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        padding-right: 0px;
+        margin-left: 9%;
+        margin-right: 5%;
+        justify-content: center;
+    }
+    .item{
+        width: 200px;
+        margin: 15px;
+        padding: 40px;
+        border-radius: 5px;
+        background-color: white;
+        line-height: 20px;
+    }
+    .featured-products{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        margin: 5%;
+        padding-left: 35px;
+        padding-right: 25px;
+        margin-bottom: 30px;
+        width: 80%;
+        justify-content: center;
+    }
+    .feature-image>img{
+        align-items: center;
+        width: 100%;
+    }
+    .feature-info{
+        padding-right: 0px;
+        padding-left: 10px;
+        text-align: center;
+    }
+    .feature-info p{
+        text-align: left;
+        padding-left: 10px;
+    }
+    .feature-info>h2{
+        color: #0A0826;
+        font-size: 20px;
+        text-align: center;
+    }
+    footer{
+        padding-top: 30px;
+        padding-bottom: 50px;
+        line-height: 10px;
+    }
+    .icons{
+        margin-left: 38%;
     }
 }
